--- a/about.qmd
+++ b/about.qmd
@@ -2,4 +2,8 @@
 title: "About"
 ---
 
-Sharav
+## About Me
+My name is Sharav Joshi, and I attend Lexington High School.
+
+[Kane's Free Data Science Bootcamp](https://bootcamp.davidkane.info)
+
